--- a/package.json
+++ b/package.json
@@ -6,20 +6,23 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.1",
-    "@mui/material": "^6.0.1",
+    "@mui/material": "^6.1.1",
     "@mui/styles": "^6.0.1",
+    "@mui/x-date-pickers": "^7.18.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.5",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
+    "date-fns": "^2.28.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "rendicion-de-gastos-frontend": "file:",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
